--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Portfolio | Shekhar &  Shelke</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="jigar sable, portfolio, jigar, full stack dev, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
+    <meta name="keywords" content="Shekhar-Shelke, portfolio, Shekhar, full stack dev, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
     <meta name="description" content="Welcome to Shekhar Portfolio. Full-Stack Web Developer and Android App Developer" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -12,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
     <link id='favicon' rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-png">
-    <title>Portfolio | Shekhar &  Shelke</title>
+    
 </head>
 <body oncontextmenu="return false">
 
@@ -57,8 +58,8 @@
           <li><a class="github" aria-label="GitHub" href="https://github.com/Shekhar-Shelke" target="_blank"><i class="fab fa-github"></i></a></li>
           <li><a class="twitter" aria-label="Twitter" href="https://twitter.com/shekharshelke_" target="_blank"><i class="fab fa-twitter"></i></a></li>
           <!-- <li><a class="telegram" aria-label="Telegram" href="https://t.me/lifecode5" target="_blank"><i class="fab fa-telegram-plane"></i></a></li> -->
-          <!-- <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/jigarsable.dev"><i class="fab fa-instagram" target="_blank"></i></a></li> -->
-          <!-- <li><a class="dev" aria-label="Dev" href="https://dev.to/jigarsable" target="_blank"><i class="fab fa-dev"></i></a></li> -->
+          <!-- <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/Shekharsable.dev"><i class="fab fa-instagram" target="_blank"></i></a></li> -->
+          <!-- <li><a class="dev" aria-label="Dev" href="https://dev.to/Shekharsable" target="_blank"><i class="fab fa-dev"></i></a></li> -->
         </ul>
       </div>
     </div>
@@ -418,7 +419,7 @@
               <a href="https://www.linkedin.com/in/shekhar-shelke/" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
               <a href="https://github.com/Shekhar-Shelke" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
               <a href="mailto:shekharshelke45@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
-              <a href="#" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
+              <a href="https://twitter.com/shekharshelke_" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
              
           </div>
       </div>
