--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
         <div class="desc">
           <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
           <div class="btns">
-            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="https://shekhar-shelke.github.io/Portfolio/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://github.com/Shekhar-Shelke/Portfolio.git" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
@@ -234,13 +234,13 @@
       <img draggable="false" src="./assets/images/projects/my project2.jpg" alt="" />
       <div class="content">
         <div class="tag">
-        <h3>Portfolio Website</h3>
+        <h3> Coder Roadmap website</h3>
         </div>
         <div class="desc">
-          <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
+          <p>This platform provides good videos, articles, and websites for coders in a properly structured way. It provides a proper way to learn web development and other languages. So now learning to code has become very easy. The entire process is trackable so that learners can see their learning graph and identify the gaps.  </p>
           <div class="btns">
             <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/Shekhar-Shelke/Coder-Roadmap-Using-React.git" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="https://github.com/Shekhar-Shelke/Coder-Roadmap-Using-React" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
