--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         
         <div class="resumebtn">
-            <a href="https://drive.google.com/file/d/1bjaxKmeedqUKhtIam90R6ovQOa4fVhPb/view?usp=sharing" target="_blank" class="btn"><span>Resume</span>
+            <a href="https://drive.google.com/file/d/1qTn4EL7wV1pawr9KoQrv6Nc35X_Wtt8F/view?usp=drive_link" target="_blank" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
